--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Sora:wght@400;600&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="./css/variables.css">
+    <link rel="stylesheet" href="./css/grid.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/reset.css">
 
@@ -16,20 +18,15 @@
 </head>
 
 <body>
-    <p>lorem ipsum dolor lorem ipsum dolort lorem ipsum dolort lorem ipsum dolort lorem ipsum dolort lorem ipsum dolort lorem ipsum dolort lorem ipsum dolort lorem ipsum dolort </p>
+    <div class="container">
+    <h1>titulo</h1>
+    <p>lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit</p>
 
-    <ul>
-        <li>menu 01</li>
-        <li>menu 02</li>
-        <li>menu 03</li>
-        <li>menu 04</li>
-    </ul>
-    
-    <button>Botao</button>
+    <p>lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit</p>
 
-    <a href="">link de ancora</a>
+    <p>lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit</p>
 
-    <img src="./img/img-hero.jpg" alt="">
-
+    <p>lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit</p>
+    </div>
 </body>
 </html>
