--- a/index.html
+++ b/index.html
@@ -11,22 +11,39 @@
 
     <link rel="stylesheet" href="./css/variables.css">
     <link rel="stylesheet" href="./css/grid.css">
+    <link rel="stylesheet" href="./css/patterns.css">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/responsive.css">
     <link rel="stylesheet" href="./css/reset.css">
 
     <title>Projeto - Wireframe</title>
 </head>
 
 <body>
-    <div class="container">
-    <h1>titulo</h1>
-    <p>lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit</p>
-
-    <p>lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit</p>
-
-    <p>lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit</p>
-
-    <p>lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit lorem ipsum dolor sit</p>
-    </div>
+    <header>
+        <div class="container">
+            <a href="./" class="logo">
+                <img src="img/logo.svg" alt="">
+            </a>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="" class="menu-item">Menu item</a>
+                    </li>
+                    <li>
+                        <a href="" class="menu-item">Menu item</a>
+                    </li>
+                    <li>
+                        <a href="" class="menu-item">Menu item</a>
+                    </li>
+                    <li>
+                        <a href="" class="menu-item">Menu item</a>
+                    </li>
+                </ul>
+                <button class="btn-primary">Call to action</button>
+            </nav>
+            <button class="menu-item menu-mobile">Menu Mobile</button>
+        </div>
+    </header>
 </body>
 </html>
