--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="./css/grid.css">
     <link rel="stylesheet" href="./css/patterns.css">
     <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="./css/responsive.css">
     <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/responsive.css">
 
     <title>Projeto - Wireframe</title>
 </head>
@@ -58,6 +58,46 @@
             </div>
         </div>
 
+    </section>
+
+    <section class="s-card-features">
+        <div class="container">
+            <div class="main-area">
+                <div class="title center">
+                    <h2>Título</h2> 
+                    <p>lorem ipsumlorem ipsumvlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
+                </div>
+                <div class="all-cards">
+                    <div class="card">
+                        <div class="icon">
+                            <img src="./img/icon-circle.svg" alt="">
+                        </div>
+                        <div class="info">
+                            <h3>Título</h3>
+                            <p>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
+                        </div>  
+                    </div>
+                    <div class="card white">
+                        <div class="icon">
+                            <img src="./img/icon-circle.svg" alt="">
+                        </div>
+                        <div class="info">
+                            <h3>Título</h3>
+                            <p>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
+                        </div>  
+                    </div>
+                    <div class="card">
+                        <div class="icon">
+                            <img src="./img/icon-circle.svg" alt="">
+                        </div>
+                        <div class="info">
+                            <h3>Título</h3>
+                            <p>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
+                        </div>  
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
