--- a/index.html
+++ b/index.html
@@ -97,7 +97,56 @@
                     </div>
                 </div>
             </div>
+            <div class="second-area">
+                <div class="top">
+                    <div class="title">
+                        <h2>Título</h2>
+                        <p>Lorem lorem lorem lorem</p>
+                    </div>
+                    <a href="" class="btn-primary">Call to action</a>
+                </div>
+                <div class="all-imgs">
+                    <div class="image">
+                        <img src="img/thumb.svg" alt="">
+                    </div>
+                    <div class="image">
+                        <img src="img/thumb.svg" alt="">
+                    </div>
+                    <div class="image">
+                        <img src="img/thumb.svg" alt="">
+                    </div>
+                    <div class="image">
+                        <img src="img/thumb.svg" alt="">
+                    </div>
+                    <div class="image">
+                        <img src="img/thumb.svg" alt="">
+                    </div>
+                    <div class="image">
+                        <img src="img/thumb.svg" alt="">
+                    </div>
+                    <div class="image">
+                        <img src="img/thumb.svg" alt="">
+                    </div>
+                    <div class="image">
+                        <img src="img/thumb.svg" alt="">
+                    </div>
+                    <div class="image">
+                        <img src="img/thumb.svg" alt="">
+                    </div>
+                    <div class="image">
+                        <img src="img/thumb.svg" alt="">
+                    </div>
+                    <div class="image">
+                        <img src="img/thumb.svg" alt="">
+                    </div>
+                    <div class="image">
+                        <img src="img/thumb.svg" alt="">
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 </body>
 </html>
+
+
