--- a/index.html
+++ b/index.html
@@ -146,6 +146,72 @@
             </div>
         </div>
     </section>
+
+    <section class="s-newsletter">
+        <div class="container">
+            <h2>Front-end descomplicado e direto ao ponto!</h2>
+            <p>Aprenda a desenvolver interfaces modernas e de alta qualidade com quem está na área atuando com projetos altamente renomados.</p>
+            <a href="" class="btn-primary">Fazer parte da lista de espera</a>
+
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <main>
+                <div class="area-left">
+                    <img src="/img/logo-footer.svg" alt="Logo do Footer">
+                    <p>Lorem impsum lorem lresssssss</p>
+                </div>
+                <nav>
+                    <div class="item">
+                        <h6>Lista de páginas</h6>
+                        <ul>
+                            <li><a href="">Text link 01</a></li>
+                            <li><a href="">Text link 02</a></li>
+                            <li><a href="">Text link 03</a></li>
+                            <li><a href="">Text link 04</a></li>
+                        </ul>
+                    </div>
+                    <div class="item">
+                        <h6>Soluções</h6>
+                        <ul>
+                            <li><a href="">Text link 01</a></li>
+                            <li><a href="">Text link 02</a></li>
+                        </ul>
+                    </div>
+                    <div class="item">
+                        <h6>Nossas redes sociais</h6>
+                        <ul>
+                            <li>
+                                <a href=""><img src="/img/instagram.svg" alt="Icone Instagram">
+                                   <span>Instagram</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href=""><img src="/img/linkedin.svg" alt="Icone Linkedin">
+                                    <span>LinkedIn</span> 
+                                </a>
+                            </li>
+                            <li>
+                                <a href=""><img src="/img/youtube.svg" alt="Icone Youtube">
+                                    <span>Youtube</span>  
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </main>
+            <div class="copy">
+                <p>2021 © Todos os direitos reservados. <strong>Codeboost</strong></p>
+                <div class="group">
+                    <span>Grupo</span>
+                    <img src="/img/boost.svg" alt="Boost">
+                </div>
+            </div>
+        </div>
+    </footer>
+
 </body>
 </html>
 
