--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="main-area">
                 <div class="title center">
                     <h2>Título</h2> 
-                    <p>lorem ipsumlorem ipsumvlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
                 </div>
                 <div class="all-cards">
                     <div class="card">
@@ -74,7 +74,7 @@
                         </div>
                         <div class="info">
                             <h3>Título</h3>
-                            <p>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nunc orci, eleifend eu porta eu, viverra non metus. </p>
                         </div>  
                     </div>
                     <div class="card white">
@@ -83,7 +83,7 @@
                         </div>
                         <div class="info">
                             <h3>Título</h3>
-                            <p>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nunc orci, eleifend eu porta eu, viverra non metus. </p>
                         </div>  
                     </div>
                     <div class="card">
@@ -92,7 +92,7 @@
                         </div>
                         <div class="info">
                             <h3>Título</h3>
-                            <p>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nunc orci, eleifend eu porta eu, viverra non metus.</p>
                         </div>  
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                 <div class="top">
                     <div class="title">
                         <h2>Título</h2>
-                        <p>Lorem lorem lorem lorem</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     </div>
                     <a href="" class="btn-primary">Call to action</a>
                 </div>
@@ -161,7 +161,7 @@
             <main>
                 <div class="area-left">
                     <img src="/img/logo-footer.svg" alt="Logo do Footer">
-                    <p>Lorem impsum lorem lresssssss</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nunc orci, eleifend eu porta eu, viverra.</p>
                 </div>
                 <nav>
                     <div class="item">
