--- a/index.html
+++ b/index.html
@@ -184,17 +184,17 @@
                         <h6>Nossas redes sociais</h6>
                         <ul>
                             <li>
-                                <a href=""><img src="/img/instagram.svg" alt="Icone Instagram">
+                                <a href=""><img src="img/instagram.svg" alt="Icone Instagram">
                                    <span>Instagram</span>
                                 </a>
                             </li>
                             <li>
-                                <a href=""><img src="/img/linkedin.svg" alt="Icone Linkedin">
+                                <a href=""><img src="img/linkedin.svg" alt="Icone Linkedin">
                                     <span>LinkedIn</span> 
                                 </a>
                             </li>
                             <li>
-                                <a href=""><img src="/img/youtube.svg" alt="Icone Youtube">
+                                <a href=""><img src="img/youtube.svg" alt="Icone Youtube">
                                     <span>Youtube</span>  
                                 </a>
                             </li>
@@ -206,7 +206,7 @@
                 <p>2021 © Todos os direitos reservados. <strong>Codeboost</strong></p>
                 <div class="group">
                     <span>Grupo</span>
-                    <img src="/img/boost.svg" alt="Boost">
+                    <img src="img/boost.svg" alt="Boost">
                 </div>
             </div>
         </div>
