--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <div class="container">
             <main>
                 <div class="area-left">
-                    <img src="/img/logo-footer.svg" alt="Logo do Footer">
+                    <img src="img/logo-footer.svg" alt="Logo do Footer">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nunc orci, eleifend eu porta eu, viverra.</p>
                 </div>
                 <nav>
